--- a/.i3/config
+++ b/.i3/config
@@ -1,18 +1,19 @@
 set $mod Mod4
-font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
+font pango:monospace 8
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec --no-startup-id rofi -show drun -show-icons
 bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+h focus left
 bindsym $mod+l focus right
 bindsym $mod+Shift+j move left
 bindsym $mod+Shift+k exec killall chrome
+bindsym $mod+Shift+n exec killall node
 bindsym $mod+Shift+l move up
 bindsym $mod+Shift+semicolon move right
 bindsym $mod+g split h
@@ -23,7 +24,6 @@ bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 bindsym $mod+Shift+space floating toggle
 bindsym $mod+space focus mode_toggle
-bindsym $mod+a focus parent
 
 bindsym $mod+1 workspace 1
 bindsym $mod+2 workspace 2
@@ -47,7 +47,6 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
-bindsym $mod+z workspace skype
 bindsym $mod+m workspace mc
 bindsym $mod+c workspace cmus
 bindsym $mod+Shift+z move container to workspace skype
@@ -75,21 +74,92 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && killall -SIGUSR1 i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && killall -SIGUSR1 i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
-client.focused #516D7B #516D7B #FFFFFF #FFFFFF
-client.focused_inactive #333333 #516D7B #888888 #FFFFFF
-client.unfocused #333333 #333333 #888888 #FFFFFF
-client.urgent #C20000 #C20000 #FFFFFF #FFFFFF
+bar {
+  id bar-1
+  status_command /bin/conky-i3bar
+  colors {
+    separator #FFFFFF
+    background #000000
+    statusline #FFFFFF
+    focused_workspace #56737a #56737a #FFFFFF
+    active_workspace #333333 #333333 #FFFFFF
+    inactive_workspace #1e1e20 #1e1e20 #888888
+    urgent_workspace #C20000 #C20000 #FFFFFF
+  }
+}
 
+# Theme colors
+client.focused #1e1e20 #1e1e20 #56737a #56737a #56737a
+client.focused_inactive #56737a #1e1e20 #56737a #2c5159 #2c5159
+client.unfocused #000000 #000000 #56737a #2c5159 #2c5159
+client.urgent #56737a #1e1e20 #56737a #2c5159 #2c5159
+client.placeholder #56737a #1e1e20 #56737a #2c5159 #2c5159
+
+client.background #1e1e20
+
+# Gaps
+gaps inner 10
+gaps outer 0
+
+smart_gaps on
+
+# Press $mod+Shift+g to enter the gap mode. Choose o or i for modifying outer/inner gaps. Press one of + / - (in-/decrement for current workspace) or 0 (remove gaps for current workspace). If you also press Shift with these keys, the change will be global for all workspaces.
+set $mode_gaps Gaps: (o) outer, (i) inner
+set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
+set $mode_gaps_inner Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
+bindsym $mod+Shift+g mode "$mode_gaps"
+
+mode "$mode_gaps" {
+  bindsym o      mode "$mode_gaps_outer"
+  bindsym i      mode "$mode_gaps_inner"
+  bindsym Return mode "default"
+  bindsym Escape mode "default"
+}
+mode "$mode_gaps_inner" {
+  bindsym plus  gaps inner current plus 5
+  bindsym minus gaps inner current minus 5
+  bindsym 0     gaps inner current set 0
+
+  bindsym Shift+plus  gaps inner all plus 5
+  bindsym Shift+minus gaps inner all minus 5
+  bindsym Shift+0     gaps inner all set 0
+
+  bindsym Return mode "default"
+  bindsym Escape mode "default"
+}
+mode "$mode_gaps_outer" {
+  bindsym plus  gaps outer current plus 5
+  bindsym minus gaps outer current minus 5
+  bindsym 0     gaps outer current set 0
+
+  bindsym Shift+plus  gaps outer all plus 5
+  bindsym Shift+minus gaps outer all minus 5
+  bindsym Shift+0     gaps outer all set 0
+
+  bindsym Return mode "default"
+  bindsym Escape mode "default"
+}
+
+# set power-manager and volume control
+# exec --no-startup-id mate-power-manager
+
+# Autostart applications
+exec --no-startup-id nitrogen --restore; sleep 1; picom -b
+exec --no-startup-id pamac-tray
+exec_always --no-startup-id fix_xcursor
+# exec_always --no-startup-id $HOME/.config/polybar/i3wmthemer_bar_launch.sh
+#
 exec setxkbmap "us,ua" ",winkeys" "grp:alt_shift_toggle"
 exec xset r rate 200 30
 exec xrdb -merge ~/.Xresources
-# exec ntpd -sd
 exec stty -ixon
 exec xset -dpms;xset s off
 exec nm-applet
 
 new_window 1pixel
 hide_edge_borders both
+
+
+bindsym $mod+a exec --no-startup-id pactl set-sink-volume 0 0
+bindsym $mod+z exec --no-startup-id pactl set-sink-volume 0 -5%
+bindsym $mod+x exec --no-startup-id pactl set-sink-volume 0 +5%
